<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="16dp"
              android:layout_marginRight="16dp"
              android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="4dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/receipt_photo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@android:color/darker_gray"
            android:cropToPadding="true"
            android:scaleType="centerInside"
            android:focusable="true"
            android:contentDescription="@string/receipt_photo_no_image_description"/>

        <ImageButton
            android:id="@+id/receipt_camera"
            android:contentDescription="@string/receipt_photo_button_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_camera"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/receipt_title"
            android:text="@string/receipt_title_label"/>

        <EditText
            android:id="@+id/receipt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:hint="@string/receipt_title_hint"/>

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/receipt_shop"
            android:text="@string/receipt_shop_label"/>

        <EditText
            android:id="@+id/receipt_shop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:hint="@string/receipt_shop_hint"/>

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/receipt_comment"
            android:text="@string/receipt_comment_label"/>

        <EditText
            android:id="@+id/receipt_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:hint="@string/receipt_comment_hint"/>
    </LinearLayout>

</LinearLayout>